# CODER_IA_GEN

./: docker-compose.yml  readme.md
back-fastapi/: pyproject.toml
back-fastapi/app/: main.py
back-fastapi/app/models/: count_table.py
coder_ia_gen/: dockerfile  index.html  package-lock.json  package.json
coder_ia_gen/src/: App.css  App.tsx
