[project]
name = "back-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Zeyroxxx34",email = "147750064+Zeyroxxx34@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
